WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
67099
[CG] ImageBufferCG should handle IOSurface allocation failure gracefully
https://bugs.webkit.org/show_bug.cgi?id=67099
Summary
[CG] ImageBufferCG should handle IOSurface allocation failure gracefully
Matthew Delaney
Reported
2011-08-28 20:55:35 PDT
In ImageBufferCG ctor, if IOSurface creation fails we just bail out, but instead should just attempt the create a backing store via the (old) non-accel path.
Attachments
patch1
(2.50 KB, patch)
2011-08-28 22:08 PDT
,
Matthew Delaney
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Matthew Delaney
Comment 1
2011-08-28 20:55:49 PDT
<
rdar://problem/9948461
>
Matthew Delaney
Comment 2
2011-08-28 22:08:13 PDT
Created
attachment 105459
[details]
patch1
Simon Fraser (smfr)
Comment 3
2011-08-28 22:33:41 PDT
Comment on
attachment 105459
[details]
patch1 View in context:
https://bugs.webkit.org/attachment.cgi?id=105459&action=review
> Source/WebCore/ChangeLog:9 > + No new tests - doesn't change behavior. > +
Sure it does, just not in a way that's easily testable.
Matthew Delaney
Comment 4
2011-08-29 15:52:42 PDT
Committed
r94024
: <
http://trac.webkit.org/changeset/94024
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug