[CG] ImageBufferCG should handle IOSurface allocation failure gracefully https://bugs.webkit.org/show_bug.cgi?id=67099

Reviewed by Simon Fraser.

No new tests. Testing the "fallback to old path" behavior is not easily testable.

* platform/graphics/cg/ImageBufferCG.cpp: Rearranged backing store creation to fall back to
  old path if IOSurface creation path fails.
(WebCore::ImageBuffer::ImageBuffer):


Canonical link: https://commits.webkit.org/82958@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94024 268f45cc-cd09-0410-ab3c-d52691b4dbfc